// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineCreate test initializes ok edit pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <button
      class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="heading"
    >
      Edit Pipeline
    </div>
    <div
      class="StyledProps--font StyledProps--main layout StyledProps--padding-xsmall"
    >
      <div>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            >
                              test
                            </span>
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value="pipeline"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="margin-bottom: 0px;"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Description
                    </label>
                    <div
                      class="bp3-form-group"
                      data-id="description-1"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <textarea
                          autocomplete="off"
                          class="bp3-input bp3-fill"
                          name="description"
                        >
                          desc
                        </textarea>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Tags
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                        data-name="edit"
                        data-testid="tags-edit"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main startBtn StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Save
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok for CD module 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <button
      class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="heading"
    >
      Create New Pipeline
    </div>
    <div
      class="StyledProps--font StyledProps--main layout StyledProps--padding-xsmall"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main helpText"
        >
          Let’s get you started by giving your pipeline a name
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                            tabindex="0"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Description
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                        data-name="edit"
                        data-testid="description-edit"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Tags
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                        data-name="edit"
                        data-testid="tags-edit"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main startBtn StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Start
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok for CI module 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <button
      class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="heading"
    >
      Create New Pipeline
    </div>
    <div
      class="StyledProps--font StyledProps--main layout StyledProps--padding-xsmall"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main helpText"
        >
          Let’s get you started by giving your pipeline a name
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                            tabindex="0"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main"
                        icon="edit"
                        style="vertical-align: middle;"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Description
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                        data-name="edit"
                        data-testid="description-edit"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Tags
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                        data-name="edit"
                        data-testid="tags-edit"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main startBtn StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Start
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PipelineCreate test initializes ok new pipeline 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main container"
  >
    <button
      class="bp3-button bp3-minimal StyledProps--font Button--button Button--with-current-color Button--iconOnly StyledProps--main closeModal"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-cross StyledProps--main"
        icon="cross"
      >
        <svg
          data-icon="cross"
          height="16"
          viewBox="0 0 16 16"
          width="16"
        >
          <desc>
            cross
          </desc>
          <path
            d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
    <div
      class="heading"
    >
      Create New Pipeline
    </div>
    <div
      class="StyledProps--font StyledProps--main layout StyledProps--padding-xsmall"
    >
      <div>
        <p
          class="StyledProps--font StyledProps--main helpText"
        >
          Let’s get you started by giving your pipeline a name
        </p>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form
            class="FormikForm--main"
          >
            <div>
              <div
                class="formInput"
              >
                <div
                  class="StyledProps--font StyledProps--main main"
                >
                  <div
                    class="InputWithIdentifier--txtNameContainer"
                  >
                    <div
                      class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main"
                      >
                        ID
                        :
                      </p>
                      <span
                        class="bp3-popover-wrapper"
                      >
                        <span
                          class="bp3-popover-target"
                        >
                          <div
                            class="bp3-editable-text bp3-disabled bp3-editable-text-placeholder InputWithIdentifier--idValue"
                          >
                            <span
                              class="bp3-editable-text-content"
                              style="height: 1px; line-height: 1px; min-width: 0;"
                            />
                          </div>
                        </span>
                      </span>
                    </div>
                    <div
                      class="bp3-form-group"
                      data-id="name-0"
                    >
                      <label
                        class="bp3-label"
                        for="name"
                      >
                        Name
                         
                        <span
                          class="bp3-text-muted"
                        />
                      </label>
                      <div
                        class="bp3-form-content"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="name"
                            type="text"
                            value="pipeline"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="margin-bottom: 0px;"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Description
                    </label>
                    <div
                      class="bp3-form-group"
                      data-id="description-1"
                    >
                      <div
                        class="bp3-form-content"
                      >
                        <textarea
                          autocomplete="off"
                          class="bp3-input bp3-fill"
                          name="description"
                        >
                          desc
                        </textarea>
                      </div>
                    </div>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main"
                  >
                    <label
                      class="Label--main"
                      style="font-size: 13px;"
                    >
                      Tags
                      <span
                        class="bp3-icon bp3-icon-edit StyledProps--main editOpen StyledProps--color StyledProps--color-grey500"
                        data-name="edit"
                        data-testid="tags-edit"
                        icon="edit"
                      >
                        <svg
                          data-icon="edit"
                          height="12"
                          viewBox="0 0 16 16"
                          width="12"
                        >
                          <desc>
                            edit
                          </desc>
                          <path
                            d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </label>
                  </div>
                </div>
              </div>
              <button
                class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main startBtn StyledProps--intent-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Start
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
